tests/mm0_mmu/fail/bad-sort342.mmu
-- bad modifier order
(sort s342 provable free strict)